# rusty_trombone

./: .gitignore  Cargo.toml  README.md  read_example  rusty_trombone  write_example
src/: constants.rs  fourier.rs  io_utils.rs  main.rs  utils.rs
src/lib/: constants.rs  fourier.rs  io_utils.rs  lib.rs  sample_generator.rs
