[package]
name = "rusty_trombone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="trombone"
path="src/lib/lib.rs"

[[bin]]
name="knn_example"
path="src/bin/knn_example.rs"

[[bin]]
name="logistic_regression_example"
path="src/bin/logistic_regression_example.rs"

[[bin]]
name="write_example"
path="src/bin/write_example.rs"

[[bin]]
name="read_example"
path="src/bin/read_example.rs"

[dependencies]
hound = "*"
num="*"
rustfft="6.1.0"
# plotters="0.3.3"  # failing for the moment ... ?
nalgebra="*"
smartcore="0.2.0"
