[package]
name = "rusty_trombone"
version = "0.1.0"
edition = "2021"


[lib]
name="trombone"
path="src/lib/lib.rs"

# ignore this, is to test stuff in local
[[bin]]
name="test"
path="src/bin/test.rs"

[[bin]]
name="knn_example"
path="src/bin/knn_example.rs"

[[bin]]
name="logistic_regression_example"
path="src/bin/logistic_regression_example.rs"

[[bin]]
name="write_example"
path="src/bin/write_example.rs"

[[bin]]
name="read_example"
path="src/bin/read_example.rs"

[dependencies]
hound = "*"
num="*"
rustfft="6.1.0"
# plotters="0.3.3"  # failing for the moment ... ?
ndarray="*"
smartcore = { version = "0.2.0", features=["ndarray-bindings"]}
